--- a/common/Makefile
+++ b/common/Makefile
@@ -1,4 +1,30 @@
-gen:
-	@protoc --go_out=. --go_opt=paths=source_relative \
-    	--go-grpc_out=. --go-grpc_opt=paths=source_relative \
-    	api/petcare.proto
+gen_orders:
+	@protoc \
+		--proto_path=protobuf "protobuf/orders.proto" \
+		--go_out=genproto/orders --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/orders --go-grpc_opt=paths=source_relative
+gen_users:
+	@protoc \
+		--proto_path=protobuf "protobuf/users.proto" \
+		--go_out=genproto/users --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/users --go-grpc_opt=paths=source_relative
+gen_records:
+	@protoc \
+		--proto_path=protobuf "protobuf/records.proto" \
+		--go_out=genproto/records --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/records --go-grpc_opt=paths=source_relative
+gen_appoinments:
+	@protoc \
+		--proto_path=protobuf "protobuf/appoinments.proto" \
+		--go_out=genproto/appoinments --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/appoinments --go-grpc_opt=paths=source_relative
+gen_products:
+	@protoc \
+		--proto_path=protobuf "protobuf/products.proto" \
+		--go_out=genproto/products --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/products --go-grpc_opt=paths=source_relative
+gen_payments:
+	@protoc \
+		--proto_path=protobuf "protobuf/payments.proto" \
+		--go_out=genproto/payments --go_opt=paths=source_relative \
+  	--go-grpc_out=genproto/payments --go-grpc_opt=paths=source_relative
